# LibraryManager

./: CMakeLists.txt  README.md
includes/: library.h  patron.h  terminal.hpp
includes/Pages/: libraryPage.h  mainPage.h  page.h  pageManager.h
includes/Pages/MainPage/: mainPage.h
includes/Pages/MainPage/LibraryPage/: addBooksPage.h  listBooksPage.h  removeBooksPage.h  updateBooksPage.h
includes/Pages/MainPage/OperationsPage/: operationsPage.h  returnBookPage.h
includes/Pages/MainPage/PatronsPage/: addPatronsPage.h  checkoutBookPage.h  listPatronsPage.h  patronsPage.h  removePatronsPage.h  updatePatronsPage.h
res/: library.json  patrons.json
src/: main.cpp
src/Pages/: library.cpp  libraryPage.cpp  mainPage.cpp  page.cpp  pageManager.cpp  patron.cpp  patronsPage.cpp
src/Pages/MainPage/: mainPage.cpp
src/Pages/MainPage/LibraryPage/: addBooksPage.cpp  libraryPage.cpp  listBooksPage.cpp  removeBooksPage.cpp  updateBooksPage.cpp
src/Pages/MainPage/OperationsPage/: checkoutBookPage.cpp  operationsPage.cpp  returnBookPage.cpp
src/Pages/MainPage/PatronsPage/: addPatronsPage.cpp  checkoutBookPage.cpp  listPatronsPage.cpp  patronsPage.cpp  removePatronsPage.cpp  returnBookPage.cpp  updatePatronsPage.cpp
